# LMS_Tages

./: .env  .gitattributes  .gitignore  .gitmessage  README.md  WARP.md  WINDOWS_SETUP.md  commitMsg.txt  convert-line-endings.ps1  docker-compose-dev-py.yml  docker-compose-dev.yml  docker-compose.yml  lesson_single_responsibility.html  log
adminPanel/: .env.example  .env.prod  (+23 more)
personal-account/: .env  .env.example  .gitignore  CERTIFICATE_INTEGRATION_GUIDE.md  CERTIFICATE_SYSTEM.md  Dockerfile  FRONTEND_CERTIFICATES_EXAMPLE.md  README.md  backlog.md  build_mkdocs.sh  main.py  mkdocs.yml  pyproject.toml  requirements.txt
personal-account/app/: __init__.py  config.py  database.py  exceptions.py  redis_client.py  telemetry.py  telemetry_config.py
personal-account/app/clients/: __init__.py  keycloak_service_auth.py  testing_client.py
personal-account/app/clients/testing/: README.md  __init__.py  contract_manager.py  examples.py  testing_client.py
personal-account/app/clients/validation/: README.md  __init__.py  contract_manager.py  examples.py  schema_loader.py
personal-account/app/core/: __init__.py  jwt.py  security.py
personal-account/app/db/: queries.py
personal-account/app/db/test_data/: certificates.json  students.json
personal-account/app/repositories/: base.py  certificate.py  integration.py  stats.py  student.py  visit.py
personal-account/app/routers/: auth.py  certificates.py  certificates.py.example  health.py  pages.py  stats.py  students.py  visits.py
personal-account/app/schemas/: certificate.py  common.py  student.py  validators.py  visit.py
personal-account/app/services/: __init__.py  auth.py  cert_service.py  certificate.py  keycloak.py  stats_processor.py  stats_service.py  stats_worker.py  storage_service.py  student.py  visit.py
personal-account/docs/: architecture.md  index.md
personal-account/docs-tech/: 404.html  index.html  objects.inv  sitemap.xml
personal-account/docs-tech/api/: index.html
personal-account/docs-tech/api/clients/: index.html
personal-account/docs-tech/api/clients/testing/: index.html
personal-account/docs-tech/api/clients/validation/: index.html
personal-account/docs-tech/api/config/: index.html
personal-account/docs-tech/api/core/jwt/: index.html
personal-account/docs-tech/api/core/security/: index.html
personal-account/docs-tech/api/database/: index.html
personal-account/docs-tech/api/repositories/base/: index.html
personal-account/docs-tech/api/repositories/certificate/: index.html
personal-account/docs-tech/api/repositories/integration/: index.html
personal-account/docs-tech/api/repositories/student/: index.html
personal-account/docs-tech/api/repositories/visit/: index.html
personal-account/docs-tech/api/routers/auth/: index.html
personal-account/docs-tech/api/routers/certificates/: index.html
personal-account/docs-tech/api/routers/health/: index.html
personal-account/docs-tech/api/routers/students/: index.html
personal-account/docs-tech/api/routers/visits/: index.html
personal-account/docs-tech/api/schemas/certificate/: index.html
personal-account/docs-tech/api/schemas/common/: index.html
personal-account/docs-tech/api/schemas/student/: index.html
personal-account/docs-tech/api/schemas/validators/: index.html
personal-account/docs-tech/api/telemetry/: index.html
personal-account/docs-tech/architecture/: index.html
personal-account/docs-tech/search/: search_index.json
personal-account/docs/api/: config.md  database.md  index.md  telemetry.md
personal-account/docs/api/clients/: index.md  testing.md
personal-account/docs/api/core/: jwt.md  security.md
personal-account/docs/api/repositories/: base.md  certificate.md  integration.md  student.md  visit.md
personal-account/docs/api/routers/: auth.md  certificates.md  health.md  students.md  visits.md
personal-account/docs/api/schemas/: certificate.md  common.md  student.md  validators.md  visit.md
personal-account/docs/api/services/: auth.md  certificate.md  keycloak.md  student.md  visit.md
personal-account/keycloak/: README.md  student-realm.json
personal-account/migrations/: migrate-001.sql
personal-account/static/css/: main.css  style.css
personal-account/static/js/: app.js
personal-account/templates/: base.hbs  callback.hbs  certificates.hbs  certificates.html  dashboard.hbs  dashboard.html  index.hbs  landing.hbs  login.hbs  login.html  profile.hbs  profile.html  register.hbs  register.html  statistics.hbs  visits.hbs  visits.html
personal-account/templates/includes/: sprite.html
personal-account/tests/: test_certificate_system.py.example
(+697 files in other folders)
