[project]
name = "personal-account"
version = "0.1.0"
description = ""
authors = [
    {name = "polina",email = "polina.rakovich23@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (==0.104.1)",
    "uvicorn[standard] (==0.24.0)",
    "pydantic[email] (==2.5.0)",
    "pydantic-settings (==2.1.0)",
    "python-dotenv (==1.0.0)",
    "psycopg[binary,pool] (==3.1.18)",
    "sqlalchemy (==2.0.23)",
    "asyncpg (==0.29.0)",
    "opentelemetry-api (==1.23.0)",
    "opentelemetry-sdk (==1.23.0)",
    "opentelemetry-exporter-otlp-proto-grpc (==1.23.0)",
    "opentelemetry-instrumentation-fastapi (==0.44b0)",
    "opentelemetry-instrumentation-httpx (==0.44b0)",
    "opentelemetry-instrumentation-sqlalchemy (==0.44b0)",
    "opentelemetry-instrumentation-logging (==0.44b0)",
    "python-keycloak (==3.12.0)",
    "httpx (==0.25.2)",
    "python-jose[cryptography] (==3.3.0)",
    "jinja2 (==3.1.2)",
    "aiofiles (==23.2.1)"
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "ruff (>=0.14.8,<0.15.0)"
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"